Closed
Bug 990793
Opened 11 years ago
Closed 11 years ago
Build error with --disable-accessibility: nsBaseWidget.cpp:1402:14: error: member access into incomplete type 'nsIPresShell'
Categories
(Core :: Widget, defect)
Tracking
()
RESOLVED
FIXED
mozilla31
People
(Reporter: dholbert, Assigned: dholbert)
Details
Attachments
(1 file)
958 bytes,
patch
|
karlt
:
review+
|
Details | Diff | Splinter Review |
New build error in my build (with ac_add_options --disable-accessibility):
{
widget/xpwidgets/nsBaseWidget.cpp:1402:14: error: member access into incomplete type 'nsIPresShell'
presShell->WindowSizeMoveDone();
^
../../dist/include/nsIWidgetListener.h:14:7: note: forward declaration of 'nsIPresShell'
class nsIPresShell;
^
}
This presumably works in normal builds because this .cpp file has:
>47 #ifdef ACCESSIBILITY
>48 #include "nsAccessibilityService.h"
>49 #endif
http://mxr.mozilla.org/mozilla-central/source/widget/xpwidgets/nsBaseWidget.cpp#47
...and nsAccessibilityService.h #includes DocManager which #includes nsIPresShell.h.
In any case, nsBaseWidget.cpp should have its own #include of nsIPresShell.h.]
(Given that I'm just hitting this for the first time today, and these presShell usages have been there for a while, I'm betting this was introduced by the most recent change to this file -- mozilla-central changeset 77b2c81993b5 for bug 984271 -- which removed an #include here, which might've been indirectly getting us nsIPresShell.h before.)
Assignee | ||
Comment 1•11 years ago
|
||
Updated•11 years ago
|
Attachment #8400263 -
Flags: review?(karlt) → review+
Assignee | ||
Comment 2•11 years ago
|
||
Flags: in-testsuite-
Comment 3•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in
before you can comment on or make changes to this bug.
Description
•