Bug 990793: Add #include for nsIPresShell.h to nsBaseWidget.cpp so it doesn't depend indirectly on a separate #ifdeffed include. r=karl